--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [tool.poetry]
-name = "cisco_django"
+name = "django_project"
 version = "0.1.0"
 description = "A basic Django RestFreamework app"
 authors = ["Maciej 'Kasprzol' Kasprzyk <git_blame@kasprzyk.tech>"]
