Dockerfile: in project virtualenv

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -5,6 +5,7 @@ RUN mkdir -p /srv/cisco
 WORKDIR /srv/cisco
 COPY ../poetry.lock /srv/cisco
 COPY ../pyproject.toml /srv/cisco
+RUN poetry config virtualenvs.in-project true
 RUN poetry install --no-root  --no-dev
 # the lines above are usually cached. The ones below will be rebuild everytime.
 COPY .. /srv/cisco
