--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,8 @@ python = "^3.10"
 djangorestframework = "^3.13.1"
 requests = "^2.27.1"
 gunicorn = "^20.1.0"
+PyYAML = "^6.0"
+uritemplate = "^4.1.1"
 
 [tool.poetry.dev-dependencies]
 black = "^22.3.0"
